# django-abstract-models

./: .editorconfig  MANIFEST.in  README.md  requirements.txt  setup.cfg
abstract_models/: abstracts.py  fields.py  querysets.py  utils.py
abstract_models/admin/: admin.py  components.py  mixins.py
abstract_models/factories/: __init__.py  factories.py
example/templates/: base.html
