[metadata]
name = django-abstract-models
version = attr: abstract_models.__version__
description = Abstract django base models (and model class factories) for rapid development
long_description = file: README.md
url = https://github.com/keyvanm/django-abstract-models
author = Keyvan Mosharraf
author_email = keyvan@keyvanm.com
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.X
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

keywords = django, abstract, models

[options]
include_package_data = true
packages = find:

install_requires =
    django~=3.1
